tests/baselines/reference/contextualTypingWithFixedTypeParameters1.errors.txt
tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts(2,22): error TS2339: Property 'foo' does not exist on type 'string'.
tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts(3,10): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/contextualTypingWithFixedTypeParameters1.ts (2 errors) ====
    var f10: <T>(x: T, b: () => (a: T) => void, y: T) => T;
    f10('', () => a => a.foo, ''); // a is string, fixed by first parameter
                         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'string'.
    var r9 = f10('', () => (a => a.foo), 1); // now a should be any
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.